<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E0F2F1"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:weightSum="1"
                tools:context="za.co.example.bonginkosilukhele.courtcounter.MainActivity">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="gdgdhdhdjdjd"
        android:textSize="24sp"
        android:textStyle="italic"
        android:background="#B2DFDB"
        android:paddingBottom="8dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_below="@id/tv_timer"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#B2DFDB"
            android:orientation="vertical"
            android:paddingTop="24dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/static_tv_home"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/home_score_txtvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                android:text="@string/tv_score"
                android:textSize="46sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_home_3points"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add3Home"
                android:text="@string/btn_3points"
                />

            <Button
                android:id="@+id/btn_home_2points"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add2Home"
                android:text="@string/btn_2points"/>

            <Button
                android:id="@+id/btn_home_1point"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add1Home"
                android:text="@string/btn_1points"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#689F38"/>

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#827717"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="#B2DFDB"
            android:orientation="vertical"
            android:paddingTop="24dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="@string/static_tv_away"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/away_score_txtvw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="24dp"
                android:text="@string/tv_score"
                android:textSize="46sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_away_3points"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add3Away"
                android:text="@string/btn_3points"/>

            <Button
                android:id="@+id/btn_away_2points"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add2Away"
                android:text="@string/btn_2points"/>

            <Button
                android:id="@+id/btn_away_1point"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="add1Away"
                android:text="@string/btn_1points"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:onClick="resetScore"
        android:text="@string/btn_reset"
        android:textStyle="bold"
        />
</RelativeLayout>